--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "lib": ["es2020"],
+    "target": "esnext",
+    "lib": ["esnext"],
     "allowJs": true,
     "noEmit": true,
     "strict": true,
